# rasterizer

./: .clang-format  .gitignore  AUTHORS  README.md  meson.build  tracer.py
lib/: obj-loader.hh
src/: color.cc  draw.cc  main.cc  main.cpp  opt-parser.cc  ppm.cc  render.cc  shader.cc  utils.cc
src/includes/: color.hh  defs.hh  draw.hh  face.hh  opt-parser.hh  ppm.hh  project.hh  render.hh  shader.hh  utils.hh
tests/: cube.fbx  head.fbx  small-robot.fbx  test_fov.fbx
